Update contact info in README

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ***********************************************************************************************************
 		   AUTOMATED ESSAY GRADER
-You can contact me by mail: karthikprasad@engineer.com.
-You can connect with me on Linkedin: www.linkedin.com/in/prasadkarthik
+You can contact us by mail: aparna.nagarajan26@gmail.com, karthikprasad@engineer.com.
+You can connect with me on Linkedin: www.linkedin.com/in/aparnanagarajan
 ***********************************************************************************************************
 
 An Automated Essay Grader,which scores student essays based on the following features:
